--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -1,17 +1,16 @@
 <div class="content first">
     <div class="content-inner">
         <p class="content-innerinner">
-            
+            ドボクを止めるな！
+            ススメ、ドボク！
         </p>
     </div>
 </div>
 
 <div class="content">
     <div class="content-inner">
-        <div class="tytle">
             <h2>Direction</h2>
             <p>活動方針</p>
-        </div>
         <div class="content_topic">
             <blockquote class="quote-orange me-0">
                 <p class="tytle_two">「あたりまえ」を理解する</p>
@@ -112,9 +111,13 @@
 
 <div class="content">
     <div class="content-inner">
-        <h2>Project</h2>
-        <p>プロジェクト</p>
-        <div id="slider">
+        <h2>Galary</h2>
+        <p>ギャラリー</p>
+       
+
+
+
+        <!-- <div id="slider">
             <figure>
                 <img src="../../assets/img/vscode.png" alt="">
                 <img src="../../assets/img/teach.jpg" alt="">
@@ -124,7 +127,7 @@
                 <img src="https://25.media.tumblr.com/d7c46e775fa6d6c613f10bceb2703b38/tumblr_mx3tqsqckF1st5lhmo1_1280.jpg"
                     alt="">
             </figure>
-        </div>
+        </div> -->
     </div>
 </div>
 <div class="content">
@@ -278,7 +281,7 @@
                 <div class="card_body">
                     <p>東京都三鷹市で、 鉄道系ドボク設計の会社をやってます。</p>
                     <p>コンクリート構造物をプログラムを整備しながら設計することを得意としています 。</p>
-                    <p>ドぼプロではここにいるエンジニアの相談役をしています。</p>
+                    <p>DoboProではここにいるエンジニアの相談役をしています。</p>
                     <!-- <p>twitter:<a href="https://twitter.com/sasaco_corp" class="twitter">https://twitter.com/sasaco_corp</a></p>
                 <p>youtube:<a href="https://www.youtube.com/watch?v=Q8FCcuAWWLc&t=0s" class="twitter">https://www.youtube.com/watch?v=Q8FCcuAWWLc&t=0s</a></p> -->
                 </div>
