--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header>
-  <h1>Dobokulab</h1>
+  <img src="../assets/img/title.png">
   <a routerLink="/base">ドボプロ</a>
   <a routerLink="/slip">斜面の安定計算</a>
   <a routerLink="/liq">液状化判定</a>
