--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -1,14 +1,63 @@
+<div class="content menu">
+    <div class="content-inner">
+        <ul>
+            <li>
+                <a href="#direction">
+                    <span class="menuTitle">Direction</span>
+                    <span class="jaTitle">活動方針</span>
+                    <i class="fas fa-caret-down"></i>
+                </a>
+            </li>
+            <li>
+                <a href="#project">
+                    <span class="menuTitle">Project</span>
+                    <span class="jaTitle">プロジェクト</span>
+                    <i class="fas fa-caret-down"></i>
+                </a>
+            </li>
+            <li>
+                <a href="#gallery">
+                    <span class="menuTitle">Gallery</span>
+                    <span class="jaTitle">ギャラリー</span>
+                    <i class="fas fa-caret-down"></i>
+                </a>
+            </li>
+            <li>
+                <a href="#team">
+                    <span class="menuTitle">Team</span>
+                    <span class="jaTitle">チーム紹介</span>
+                    <i class="fas fa-caret-down"></i>
+                </a>
+            </li>
+            <li><a href="#member">
+                    <span class="menuTitle">Member</span>
+                    <span class="jaTitle">メンバー</span>
+                    <i class="fas fa-caret-down"></i>
+                </a>
+            </li>
+            <li>
+                <a href="#contact">
+                    <span class="menuTitle">Contact</span>
+                    <span class="jaTitle">お問い合わせ</span>
+                    <i class="fas fa-caret-down"></i>
+                </a>
+            </li>
+        </ul>
+    </div>
+</div>
+
+
 <div class="content first">
     <div class="content-inner">
         <p class="content-innerinner">
-            ポケットサイズから始まる新しいドボクを
+            ポケットサイズから始まる<span style="display: inline-block;">新しいドボクを</span>
         </p>
     </div>
 </div>
 
 <div class="content">
     <div class="content-inner">
-        <h2>Direction</h2>
+        <h2 id="direction">Direction</h2>
         <p>活動方針</p>
         <div class="content_topic">
             <blockquote class="quote-orange me-0">
@@ -61,7 +110,7 @@
 
 <div class="content appintro">
     <div class="content-inner">
-        <h2>Project</h2>
+        <h2 id="project">Project</h2>
         <p>プロジェクト</p>
         <div class="card left wow fadeInUp pj" data-wow-duration="1.3s" data-wow-delay="0.3s"
             style="visibility: visible; animation-duration: 1.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
@@ -110,9 +159,9 @@
 
 <div class="content">
     <div class="content-inner">
-        <h2>Galary</h2>
+        <h2 id="gallery">Gallery</h2>
         <p>ギャラリー</p>
-        
+
         <!-- <section class="carousel" aria-label="Gallery">
           <ol class="carousel__viewport">
             <li id="carousel__slide1"
@@ -190,7 +239,7 @@
 </div>
 <div class="content">
     <div class="content-inner">
-        <h2>Dobokulab</h2>
+        <h2 id="team">Dobokulab</h2>
         <p>チーム紹介</p>
         <div class="content_topic">
             <blockquote class="quote-orange me-0">
@@ -232,7 +281,7 @@
 
 <div class="content appintro">
     <div class="content-inner">
-        <h2>Member</h2>
+        <h2 id="member">Member</h2>
         <p>メンバー紹介</p>
         <div class="card left wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.3s"
             style="visibility: visible; animation-duration: 1.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
@@ -268,7 +317,8 @@
                     <p>最近は様々なことに興味を持ち、「挑戦する」ということを心がけています。</p>
                     <p>未熟者ですが、今回の斜面の安定アプリ作成で使用したthree.jsについても勉強中です。</p>
                     <p>また、土木分野についても様々な知識を取り入れていきたいと思ってます！</p>
-                    <a class="twitter" href="https://twitter.com/Yoshi99605582"><i class="fab fa-twitter-square"></i></a>
+                    <a class="twitter" href="https://twitter.com/Yoshi99605582"><i
+                            class="fab fa-twitter-square"></i></a>
                 </div>
             </div>
         </div>
@@ -324,7 +374,8 @@
                 <div class="card_body">
                     <p>日本全国を旅しながら、土木/建築写真を撮影中。鉄道構造物がお気に入り。
                         HTML・CSSから逃げるな。</p>
-                    <a class="twitter" href="https://twitter.com/O2Sz4sn6YWQ9uG7"><i class="fab fa-twitter-square"></i></a>
+                    <a class="twitter" href="https://twitter.com/O2Sz4sn6YWQ9uG7"><i
+                            class="fab fa-twitter-square"></i></a>
                 </div>
             </div>
         </div>
@@ -350,5 +401,12 @@
             </div>
         </div>
 
+    </div>
+</div>
+
+<div class="content">
+    <div class="content-inner">
+        <h2 id="contact">Contact</h2>
+        <p>お問い合わせ</p>
     </div>
 </div>
