--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,9 @@
+html{
+  overflow-y: scroll;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+}
+
 header {
   text-align: center;
   font-size: 20px;
@@ -71,9 +77,10 @@ p {
     font-weight: 900;
   }
   >p {
+    margin-bottom: 32px;
     text-align: center;
     letter-spacing: 1.6px;
-    font-size: calc(.071em + 26 * (100vw - 375px) / 1305);
+    font-size: calc(.5em + 26 * (100vw - 375px) / 1305);
   }
   ol {
     padding: 0 0 8px 32px;
@@ -119,6 +126,72 @@ p {
     line-height: 1.5;
     padding: 0.5em;
     list-style-type: none !important;
+  }
+}
+
+.content.menu{
+  background-color:#000099;
+  .content-inner{
+    padding: 16px;
+  }
+  ul{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    li{
+      display: inline-block;
+      width: 300px;
+      padding:4px;
+      border-right:1px solid #fff;
+      text-align:center;
+      .menuTitle{
+        font-size: calc(0.571em + 26 * (100vw - 375px) / 1305);
+        font-weight: 500;
+      }
+      color:#fff;
+      .jaTitle{
+        display: block;
+        font-size: calc(0.001em + 23 * (100vw - 375px) / 1305);
+      }
+      i{
+        display: block;
+      }
+      &:last-child{
+        border-right:0;
+      }
+    }
+  }
+}
+
+@media screen and (max-width:767px){
+  .content.menu{
+    background-color:#000099;
+    .content-inner{
+      padding: 8px;
+    }
+    ul{
+      display:flex;
+      justify-content: center;
+      align-items: center;
+      li{
+        display: inline-block;
+        width: 300px;
+        padding: 12px 10px 13px;
+        border-right:1px solid #fff;
+        text-align:center;
+        .menuTitle{
+          font-size: calc(0.571em + 26 * (100vw - 375px) / 1305);
+          font-weight: 500;
+        }
+        color:#fff;
+        .jaTitle{
+          display: none;
+        }
+        &:last-child{
+          border-right:0;
+        }
+      }
+    }
   }
 }
 
@@ -358,6 +431,9 @@ blockquote.quote-topic {
 blockquote {
   background: #fff;
   border-left: 0.7rem solid #007bff;
+  // border-top:3px solid #f5f5f5;
+  // border-right:3px solid #f5f5f5;
+  // border-bottom:3px solid #f5f5f5;
   padding: 16px;
   display: block;
   .tytle_two {
@@ -399,6 +475,12 @@ blockquote {
         text-decoration: none;
       }
     }
+  }
+}
+
+.content.appintro{
+  p{
+    margin: 0;
   }
 }
 
