--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,7 @@ html {
   -webkit-tap-highlight-color: transparent; /* 3*/
   color:#333333;
   font: 400 14px/20px Roboto, "Helvetica Neue", sans-serif;
+  scroll-behavior: smooth;
 }
 
 /* Sections */
@@ -39,6 +40,7 @@ html {
 
 body {
   margin: 0;
+  scroll-behavior: smooth; 
 }
 
 /**
