--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
 <header>
-  <img src="../assets/img/title.png">
-  <a routerLink="/base">ドボプロ</a>
-  <a routerLink="/slip">斜面の安定計算</a>
-  <a routerLink="/liq">液状化判定</a>
-  <a routerLink="/">お問い合わせ</a>
+  <a routerLink="./page" style="border:0;">
+    <img src="../assets/img/DoboPro_skell.png">
+    </a>
 </header>
 
 <router-outlet></router-outlet>
