--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -127,7 +127,7 @@
                     <p>構造物にL2地震動（非常に強い地震動）が発生した場合、液状化が発生するか判定したものになります。判定には土の繰り返し三軸圧縮試験によって液状化強度比Rと繰返し回数Ncの関係を計測している必要があります。
                     </p>
                     <div class="button_area">
-                        <a class="button_1" routerLink='/'>特設ページへ</a>
+                        <a class="button_1" routerLink='../liq'>特設ページへ</a>
                     </div>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                     <p>斜面の形状によって、安全率Fを算出し。斜面に存在する土砂がどのように滑るのか、アニメーションを用いて判定するものになります。その計算方法として、斜面が滑るときの面に生じるせん断強度Rをすべり面に作用する土のせん断荷重Lで除した数値で行っています。
                     </p>
                     <div class="button_area">
-                        <a class="button_1" routerLink='/'>特設ページへ</a>
+                        <a class="button_1" routerLink='../slip'>特設ページへ</a>
                     </div>
                 </div>
             </div>
@@ -239,8 +239,14 @@
 </div>
 <div class="content">
     <div class="content-inner">
-        <h2 id="team">Dobokulab</h2>
+        <h2 id="team">Team</h2>
         <p>チーム紹介</p>
+        <div class="explain">
+        <a href="https://doboku-lab.com/">
+        <img src="../../assets/img/dobokulab.png">
+        </a>
+            <p>我々のチームの基盤は"DobokuLab"という土木系学生団体です。DobokuLabの理念に則って活動しております。</p>
+        </div>
         <div class="content_topic">
             <blockquote class="quote-orange me-0">
                 <p class="tytle_two">土木学生の</p>
@@ -275,6 +281,7 @@
                 我々を業界形成の末端と考え、学生―土木業界間の双方向の発信を終着点とみなすのではなく、業界の末端はあくまで一般社会であることを自覚し、業種や世代にこだわらない発信を課題とします。</p>
             <p></p>
         </div>
+    
     </div>
 </div>
 
@@ -408,5 +415,8 @@
     <div class="content-inner">
         <h2 id="contact">Contact</h2>
         <p>お問い合わせ</p>
+        <div class="button_area">
+            <a class="button_1" href="https://docs.google.com/forms/d/e/1FAIpQLSe9J9-qJiORNPNgjGvCIsZLiICKv1GvlFIRSJUnK0-Tevd74Q/viewform?usp=sf_link">お問い合わせはこちら</a>
+        </div>
     </div>
 </div>
