--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -161,80 +161,11 @@
     <div class="content-inner">
         <h2 id="gallery">Gallery</h2>
         <p>ギャラリー</p>
-
-        <!-- <section class="carousel" aria-label="Gallery">
-          <ol class="carousel__viewport">
-            <li id="carousel__slide1"
-                tabindex="0"
-                class="carousel__slide">
-              <div class="carousel__snapper"><img src="../../assets/img/vscode.png" alt="">
-                <a href="#carousel__slide4"
-                   class="carousel__prev">Go to last slide</a>
-                <a href="#carousel__slide2"
-                   class="carousel__next">Go to next slide</a>
-                </div>
-            </li>
-            <li id="carousel__slide2"
-                tabindex="0"
-                class="carousel__slide">
-              <div class="carousel__snapper"></div>
-              <a href="#carousel__slide1"
-                 class="carousel__prev">Go to previous slide</a>
-              <a href="#carousel__slide3"
-                 class="carousel__next">Go to next slide</a>
-            </li>
-            <li id="carousel__slide3"
-                tabindex="0"
-                class="carousel__slide">
-              <div class="carousel__snapper"></div>
-              <a href="#carousel__slide2"
-                 class="carousel__prev">Go to previous slide</a>
-              <a href="#carousel__slide4"
-                 class="carousel__next">Go to next slide</a>
-            </li>
-            <li id="carousel__slide4"
-                tabindex="0"
-                class="carousel__slide">
-              <div class="carousel__snapper"></div>
-              <a href="#carousel__slide3"
-                 class="carousel__prev">Go to previous slide</a>
-              <a href="#carousel__slide1"
-                 class="carousel__next">Go to first slide</a>
-            </li>
-          </ol>
-          <aside class="carousel__navigation">
-            <ol class="carousel__navigation-list">
-              <li class="carousel__navigation-item">
-                <a href="#carousel__slide1"
-                   class="carousel__navigation-button">Go to slide 1</a>
-              </li>
-              <li class="carousel__navigation-item">
-                <a href="#carousel__slide2"
-                   class="carousel__navigation-button">Go to slide 2</a>
-              </li>
-              <li class="carousel__navigation-item">
-                <a href="#carousel__slide3"
-                   class="carousel__navigation-button">Go to slide 3</a>
-              </li>
-              <li class="carousel__navigation-item">
-                <a href="#carousel__slide4"
-                   class="carousel__navigation-button">Go to slide 4</a>
-              </li>
-            </ol>
-          </aside>
-        </section> -->
-
-        <!-- <div id="slider">
-            <figure>
-                <img src="../../assets/img/vscode.png" alt="">
-                <img src="../../assets/img/teach.jpg" alt="">
-                <img src="../../assets/img/make.jpg" alt="">
-                <img src="https://31.media.tumblr.com/3afad829ce330a66b3bbb98831c1c393/tumblr_mx3tpto69r1st5lhmo1_1280.jpg"
-                    alt="">
-                <img src="https://25.media.tumblr.com/d7c46e775fa6d6c613f10bceb2703b38/tumblr_mx3tqsqckF1st5lhmo1_1280.jpg"
-                    alt="">
-            </figure>
-        </div> -->
+                <div class="slider">
+            <div class="slider__content"><img src="../../assets/img/vsdisplay.jpg" alt="写真" height="65%" width="100%"  class="working_img"></div>
+            <div class="slider__content"><img src="../../assets/img/teach.jpg"  alt="写真"height="65%" width="100%"  class="working_img"></div>
+            <div class="slider__content"><img src="../../assets/img/make2.jpg" alt="写真"height="65%" width="100%"  class="working_img"></div>
+          </div>
     </div>
 </div>
 <div class="content">
@@ -245,7 +176,7 @@
         <a href="https://doboku-lab.com/">
         <img src="../../assets/img/dobokulab.png">
         </a>
-            <p>我々のチームの基盤は"DobokuLab"という土木系学生団体です。DobokuLabの理念に則って活動しております。</p>
+            <p>我々のチームの基盤は「DobokuLab」という土木系学生団体です。Dobo×ProはDobokuLabの理念に則って活動しております。</p>
         </div>
         <div class="content_topic">
             <blockquote class="quote-orange me-0">
