サイズ微調整

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,7 +34,7 @@ header {
 p {
   font-size: 18px;
   letter-spacing: 0.8px;
-  padding-bottom: 16px;
+  margin-bottom: 4px;
 }
 
 .tytle_two {
@@ -56,7 +56,6 @@ p {
   font-size: 24px;
   font-weight: 500;
   display: block;
-  width: 100%;
 
 }
 .button_area {
@@ -534,7 +533,7 @@ blockquote {
 
 .slip_img {
   display: block;
-  width: 100%;
+  width: 80%;
   padding-right: 8px;
   margin:4px auto;
 }
