--- a/src/app/lotationalslip/lotationalslip.component.html
+++ b/src/app/lotationalslip/lotationalslip.component.html
@@ -249,19 +249,33 @@
              <p class="tytle_four">cssで人格形成</p>
         </div>
         <div class="text_content">
-            <p>さて、入れ物がたくさんできたわけですが、このままだと無機質なサイトになってしまいます。それを防ぐために</p>
+            <p>さて、入れ物がたくさんできたわけですが、このままだと無機質なサイトになってしまいます。それを防ぐために、それぞれの入れ物に対して色であったり、幅であったり、細かいデザインを決めてあげます。<br>
+                <strong>入れ物に対してアイデンティティを付与してあげること</strong>がcssの仕事なのです。</p>
+                <p>この際、苗字単位でデザインの指定ができるのですが、親の好き嫌いは子にも遺伝してしまいます。<br>
+                    色は視覚的に捉えやすいですが、空欄や縦横の幅は、それぞれが影響し合っているので、意外なところで「君が邪魔してたんだね」と気づくことがあります。</p>
         </div>
         <div class="content_topic">
             <p class="tytle_four">div達もソーシャルディスタンス</p>
        </div>
        <div class="text_content">
-           <p>さて、入れ物がたくさんできたわけですが、このままだと無機質なサイトになってしまいます。それを防ぐために</p>
+           <p>先ほど空欄と言いましたが、この空欄を何も指定しないとキツキツの原稿用紙のようなサイトになってしまいます。<br>なので、それぞれに<strong>padding</strong>や<strong>margin</strong>を指定してあげることで、div達にソーシャルディスタンスを保つように命令し、サイトや文章を見やすいものにしてあげます。<br>
+            こうすることで、ただの箱だった入れ物に装飾を施すことができるようになり、見やすいサイトができるようになります。
+            </p>
        </div>
         <div class="content_topic">
             <p class="tytle_four">もっといろいろなサイトを覗かなくては！</p>
         </div>
         <div class="text_content">
-            <p>私たちの</p>
+            <p>上で説明したことはまだまだ最初の一歩目であって、divが増えれば増えるほど、複雑になり、親子関係もわかりにくくなります。<br>
+                そのため、あらかじめ使いたい入れ物達のセットを作ることで、コピー＆ペーストでだけでサイトの骨格を作り、デザインの修正を少なくするという工夫をすることができます。</p>
+            <p>世の中には無数のサイトがあり、少し調べれば、「こんなことできるの？」と圧倒されるデザインばかりです。<br>
+                ただ、今回のこのページは、htmlとcssの勉強を始めてからおよそ72時間で作り始めたもので、まだまだ拙いですが、普通のサイトと遜色ないサイトを作ることができたと思います。<br>
+                短時間の学習で成果をあげられた要因としては、社会人や友人の協力以外にも、チーム内で<strong>「ペアプログラミング」</strong>を採用したことが大きな要因だと考えています。<br>
+                ひとりで悩んでもプログラミングはうまくなりません。なぜなら言葉という概念がそもそも成り立っていないからです。<br>
+                つまり、プログラミングを学習するにあたって必要なことは、htmlをhtmlを使って説明している参考書ではなく、htmlを日本語を使って説明してくれる人間の存在なのです。
+                </p>
+            <p>これから、プログラミング班にも新メンバーが参加する予定です。それぞれが学んだ分野を伝え合うことでチームのレベルアップをしていきたいと思います。</p>
+            <p>最後まで見ていただきありがとうございました。</p>
         </div>
     </div>
 </div>
