--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -332,10 +332,11 @@
                     <p>東京都三鷹市で、 鉄道系ドボク設計の会社をやってます。</p>
                     <p>コンクリート構造物をプログラムを整備しながら設計することを得意としています 。</p>
                     <p>DoboProではここにいるエンジニアの相談役をしています。</p>
+                    <div class="iconArea">
                     <a class="twitter" href="https://twitter.com/sasaco_corp"><i class="fab fa-twitter-square"></i></a>
-                    <!-- <p>twitter:<a href="https://twitter.com/sasaco_corp" class="twitter">https://twitter.com/sasaco_corp</a></p>
-                <p>youtube:<a href="https://www.youtube.com/watch?v=Q8FCcuAWWLc&t=0s" class="twitter">https://www.youtube.com/watch?v=Q8FCcuAWWLc&t=0s</a></p> -->
-                </div>
+                    <a class="youtube" href="https://www.youtube.com/watch?v=Q8FCcuAWWLc&t=0s"><i class="fab fa-youtube"></i></a>
+                   </div>
+                   </div>
             </div>
         </div>
 
