--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -633,15 +633,29 @@ blockquote {
   font-size: 16px;
   letter-spacing: 1.6px;
   line-height: 24px;
+  .iconArea{
+    display: flex;
+  }
   .twitter{
       display: block;
       margin-top:8px;
-      color: #00ccee;
+      color: #00acee;
       font-size: 42px;
       &:hover{
         opacity: 0.7;
       }
     }
+    .youtube{
+      display: block;
+      margin-top:8px;
+      margin-left:8px;
+      color: #c4302b;
+      font-size: 42px;
+      &:hover{
+        opacity: 0.7;
+      }
+    }
+    
   }
 
 footer {
