--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -42,7 +42,7 @@ p {
   font-weight: 1000;
   line-height: 25px;
   display: block;
-  width: 80%;
+  width: 100%;
 }
 .tytle_three {
   font-size: 48px;
@@ -52,7 +52,6 @@ p {
 .tytle_four {
   background: linear-gradient(transparent 70%, #a7d6ff 70%);
   padding-left: 8px;
-  margin: 24px auto 10px auto;
   font-size: 24px;
   font-weight: 500;
   display: block;
@@ -83,7 +82,7 @@ p {
 
 .content-inner {
   max-width: 1200px;
-  padding: 16px;
+  padding: 8px;
   margin: 0 auto;
   h2 {
     font-size: calc(2.571em + 26 * (100vw - 375px) / 1305);
@@ -153,21 +152,7 @@ p {
   img.slice_jpg{
     width: auto;
   }
-  .menuTitle{
-    font-size: calc(2.571em + 26 * (100vw - 375px) / 1305);
-    letter-spacing: 0.06em;
-    line-height: 2.09;
-    text-align: center;
-    color: #191970;
-    font-weight: 900;
-  }
-  .jaTitle{
-    font-size: 48px;
-    text-align: center;
-    color: #0080ff;
-    margin-top: -18px;
-    margin-bottom: 16px;
-  }
+
 }
 
 .explain img{
@@ -450,7 +435,7 @@ p {
   }
   .list {
     margin: 8px -8px;
-    padding: 0 8px;
+    padding: 0 ;
     font-weight: 800;
     font-size: 20px;
     background-color: #ffffff;
@@ -500,7 +485,6 @@ blockquote {
 .tytle_four {
   background: linear-gradient(transparent 70%, #a7d6ff 70%);
   padding-left: 8px;
-  margin: 24px 56px 12px;
   font-size: 20px;
   font-weight: 500;
 }
